# reverse

./: README.md  index.html  reverse.cabal  style.css
app/: Board.hs  Main.hs  SampleGames.hs
