cabal-version:      2.4
name:               reverse
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A reversi clone implemented in Haskell, front-end implemented as a website.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/ettolrach/reverse/issues

-- The license under which the package is released.
license: Apache License 2.0 (see ./LICENSE)
author:             ettolrach
maintainer:         ettolrach@disroot.org

-- A copyright notice.
copyright: Copyright 2022 Charlotte Ausel
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable reverse
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
